--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,12 @@
 
 <!--    list for material-->
     <script>
+        let arr = [];
+        let a=1;
         function addInput() {
+            arr=[]
+            arr.push(document.getElementById(("select_materials"+a)).value,document.getElementById(("input_materials"+a)).value)
+            a+=1
             var container = document.getElementById("container");
             var newDiv = document.createElement("div");
             newDiv.id = "list_materials";
@@ -56,66 +61,69 @@
 
             var select = document.createElement("select");
             select.className = "btn btn-outline-secondary dropdown-toggle";
+            select.name = "whatMaterial1";
+            select.id=("select_materials"+a);
 
             var option1 = document.createElement("option");
-            option1.value = "1";
+            option1.value = "1 "+arr;
             option1.innerHTML = "Песок карьерный";
             select.appendChild(option1);
 
             var option2 = document.createElement("option");
-            option2.value = "2";
+            option2.value = "2 "+arr;
             option2.innerHTML = "Песок строительный";
             select.appendChild(option2);
 
             var option3 = document.createElement("option");
-            option3.value = "3";
+            option3.value = "3 "+arr;
             option3.innerHTML = "Гравий";
             select.appendChild(option3);
 
             var option4 = document.createElement("option");
-            option4.value = "4";
+            option4.value = "4 "+arr;
             option4.innerHTML = "ПГС (песчано-гравийная смесь)";
             select.appendChild(option4);
             var option5 = document.createElement("option");
-            option5.value = "5";
+            option5.value = "5 "+arr;
             option5.innerHTML = "Щебень природный";
             select.appendChild(option5);
             var option6 = document.createElement("option");
-            option6.value = "6";
+            option6.value = "6 "+arr;
             option6.innerHTML = "Пескогрунт";
             select.appendChild(option6);
             var option7 = document.createElement("option");
-            option7.value = "7";
+            option7.value = "7 "+arr;
             option7.innerHTML = "Грунт";
             select.appendChild(option7);
             var option8 = document.createElement("option");
-            option8.value = "8";
+            option8.value = "8 "+arr;
             option8.innerHTML = "Супесь";
             select.appendChild(option8);
             var option9 = document.createElement("option");
-            option9.value = "9";
+            option9.value = "9 "+arr;
             option9.innerHTML = "Суглинок";
             select.appendChild(option9);
             var option10 = document.createElement("option");
-            option10.value = "10";
+            option10.value = "10 "+arr;
             option10.innerHTML = "Глина";
             select.appendChild(option10);
             var option11 = document.createElement("option");
-            option11.value = "11";
+            option11.value = "11 "+arr;
             option11.innerHTML = "Булыжник";
             select.appendChild(option11);
             var option12 = document.createElement("option");
-            option12.value = "12";
+            option12.value = "12 "+arr;
             option12.innerHTML = "Валун для ландшафта";
             select.appendChild(option12);
             var option13 = document.createElement("option");
-            option13.value = "13";
+            option13.value = "13 "+arr;
             option13.innerHTML = "Ландшафтный камень";
             select.appendChild(option13);
 
 
             var input = document.createElement("input");
-            input.type = "text";
+            input.id=("input_materials"+a);
+            input.name = "value1";
             input.className = "form-control";
             input.placeholder = "Укажите объем";
             input.setAttribute("aria-label", "Text input with dropdown button");
@@ -145,7 +153,7 @@
     <div id="container">
         <div id="list_materials" class="input-group mb-3">
     <!--        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>-->
-                <select id="select_materials" class="btn btn-outline-secondary dropdown-toggle" name="whatMaterial1">
+                <select id="select_materials1" class="btn btn-outline-secondary dropdown-toggle" name="whatMaterial1">
                     <option value="1">Песок карьерный</option>
                     <option value="2">Песок строительный</option>
                     <option value="3">Гравий</option>
@@ -160,7 +168,7 @@
                     <option value="12">Валун для ландшафта</option>
                     <option value="13">Ландшафтный камень</option>
                 </select>
-            <input name="value1" class="form-control" placeholder="Укажите объем" aria-label="Text input with dropdown button">
+            <input id="input_materials1" name="value1" class="form-control" placeholder="Укажите объем" aria-label="Text input with dropdown button">
             <button type="button" class="btn btn-info" onclick="addInput()">+</button>
 <!--            <button type="button" class="btn btn-info" onclick="addInput()">+</button>-->
         </div>
