Add Name in site

--- a/views/index.html
+++ b/views/index.html
@@ -115,6 +115,8 @@
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Ваш номер телефона</label>
         <input class="form-control" id="exampleFormControlInput1" placeholder="+79999999999" name="phoneNumber"/>
+        <label for="exampleFormControlInput" class="form-label">Ваше имя</label>
+        <input class="form-control" id="exampleFormControlInput" placeholder="Иван" name="name"/>
 <!--        <button type="submit">+</button>-->
     </div>
 
